# TRIM

./: .gitignore  CMakeLists.txt  COMMANDS.md  README.md  TODO.md  abstract.md  commands-avx512.md  commond.md  reproduce.md
bench/: IVFPQfs.py  alg.py  bench.py  commands.md  cos.py  dimTest.py  error.py  gamma.py  hnsw.py  landmarks.py  parameterM.py  plot.py  preprocessing.py  relaxedLB.py  run_all.sh  scalability.py  tIVFPQ.py  tIVFPQfs.py  top_hnsw.py  trim.py  uIVFPQ.py  unity.py  utils.py
bench/results/: QPSDCRecall_GIST_IVFPQ_ARS_0.01%.csv  QPSDCRecall_GIST_IVFPQ_ARS_0.1%.csv  QPSDCRecall_GIST_IVFPQ_KNN_k10.csv  (+71 more)
examples/: hnsw.cc  index_pq_example.cc  ivfpqfs.cc  main.cc  opq.cc  pq.cc  proxy.cc  sgemm.cc
include/: versions.txt
python/: bindings.cc  setup.py
results/: 11701ae_gist_hnsw16x500.csv  11701ae_gist_uhnsw16x500_pq8x120.csv  11701ae_nytimes_hnsw16x500.csv  11701ae_nytimes_uhnsw16x500_pq8x32.csv  27b6933_gist_hnsw16x500.csv  27b6933_gist_uhnsw16x500_pq8x120.csv  27b6933_nytimes_hnsw16x500.csv  27b6933_nytimes_uhnsw16x500_pq8x32.csv  51a08bf_gist_hnsw16x500.csv  51a08bf_gist_uhnsw16x500_pq8x120.csv  51a08bf_gist_uhnsw16x500_pq8x160.csv  51a08bf_gist_uhnsw16x500_pq8x240.csv  51a08bf_gist_uhnsw16x500_pq8x30.csv  51a08bf_gist_uhnsw16x500_pq8x40.csv  51a08bf_gist_uhnsw16x500_pq8x60.csv  51a08bf_gist_uhnsw16x500_pq8x80.csv  51a08bf_nytimes_hnsw16x500.csv  51a08bf_nytimes_uhnsw16x500_pq8x16.csv  51a08bf_nytimes_uhnsw16x500_pq8x32.csv  51a08bf_nytimes_uhnsw16x500_pq8x64.csv  51a08bf_nytimes_uhnsw16x500_pq8x8.csv  616c5a0_gist_hnsw16x500.csv  616c5a0_gist_uhnsw16x500_pq8x120.csv  616c5a0_glove_hnsw16x500.csv  616c5a0_glove_uhnsw16x500_pq8x25.csv  616c5a0_nytimes_hnsw16x500.csv  616c5a0_nytimes_uhnsw16x500_pq8x32.csv  616c5a0_nytimes_uhnsw16x500_pq8x64.csv  6c802ad_gist_hnsw16x500.csv  74fe0f9_gist_hnsw16x500.csv  74fe0f9_gist_uhnsw16x500_pq8x120.csv  74fe0f9_glove_hnsw16x500.csv  74fe0f9_glove_uhnsw16x500_pq8x25.csv  74fe0f9_nytimes_hnsw16x500.csv  77d1108_gist_hnsw16x500.csv  77d1108_gist_uhnsw16x500_pq8x120.csv  77d1108_nytimes_hnsw16x500.csv  77d1108_nytimes_uhnsw16x500_pq8x32.csv  a5ad503_glove_hnsw16x500.csv  a5ad503_nytimes_uhnsw16x500_pq8x32.csv  (+8 more)
src/: faiss.cc  faiss_blas.cc  unity.cc  versions.txt
test/: build.py  ivfpqfs_example.py  ivfpqfs_refine.py  test.py
top/: f32_quant.h  factory.h  faiss_index.h  faiss_index_read.h  hnsw_searcher.h  memory.h  neighbor.h  pq.h  read_faiss.h  read_faiss_index.h  read_hnswlib.h  searcher.h  top.h
unity/: unity.h
(+194 files in other folders)
